1998-08-10  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-nemacs.el, emu-latin1.el (write-region-as-raw-text-CRLF):
	New function.

	* emu-20.el (write-region-as-raw-text-CRLF): Renamed from
	`write-region-as-CRLF'.

1998-08-10  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-latin1.el, emu-e20.el (decode-mime-charset-region): Add new
	argument `lbt'.
	(decode-mime-charset-string): Likewise.

	* emu-x20.el: Define coding-system `raw-text-unix' and
	`raw-text-mac' if they are not found.
	Redefine coding-system `euc-kr' if `euc-kr-dos' is not found.
	(decode-mime-charset-region-default): Add new argument `lbt'.
	(decode-mime-charset-region-with-iso646-unification): Likewise.
	(decode-mime-charset-region-for-hz): Likewise.
	(decode-mime-charset-region): Likewise.
	(decode-mime-charset-string): Likewise.

	* emu-20.el (mime-charset-to-coding-system): Regard `CRLF', `LF',
	`CR' as line break code type.

1998-08-07  MORIOKA Tomohiko  <morioka@yo.rim.or.jp>

	* emu-x20.el: Define coding-system `raw-text-dos' if it is not
	found.

	* emu-20.el (write-region-as-CRLF): New function.

1998-07-21  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* install.el (install-detect-elisp-directory): Modify for anything
 	older than Emacs 19.28.


1998-06-22  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 8.16 was released.

	* emu.el, emu-x20.el: Require `emu-20' in emu-x20.el.

1998-06-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-x20.el (set-buffer-multibyte): Use `defsubst-maybe' instead
	of `defmacro-maybe'.

1998-06-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-20.el, emu-x20.el: Move `insert-file-contents-as-binary' and
	`insert-file-contents-as-raw-text' from emu-x20.el to emu-20.el.

	* emu-e20_2.el, emu-e20.el: Move `insert-file-contents-as-binary'
	and `insert-file-contents-as-raw-text' from emu-e20.el to
	emu-e20_2.el.


1998-06-09  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 8.15 was released.
